Fixed border line on mobile

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -82,7 +82,8 @@ body
       padding-left: 1.3em
       margin: 0em
       display: inline
-      border-right: 0px
+      &:not(.last)
+        border-right: 0px
 
   .description
     font-size: .7em
